--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "fakEcommerce",
+    "name": "fak-e commerce",
     "slug": "fakEcommerce",
     "version": "1.0.0",
     "orientation": "portrait",
